tests/dev_server/errors/stories/js_module_unhandled_rejection/main.js
Promise.reject(new Error("toto"));
